# Codeflying-LandingPage-Brazil

./: .gitignore  PLAN.md  README.md  request.md
api/: .env.example  dump.rdb  pyproject.toml  railway.json
api/app/: __init__.py  auth.py  main.py  rate_limit.py  redis_client.py  schemas.py  settings.py  stripe_client.py  turnstile.py
api/app/routes/: __init__.py  checkout.py  email_only.py  me.py  stats.py  webhooks.py
api/tests/: conftest.py  test_auth.py  test_counter.py  test_rate_limit.py  test_webhook_handler.py
web/: package.json  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/track/: route.ts
web/src/app/cancelado/: page.tsx
web/src/app/meus-dados/: page.tsx
web/src/app/obrigado/: page.tsx
web/src/app/painel/: page.tsx
web/src/app/privacidade/: page.tsx
web/src/app/termos/: page.tsx
web/src/components/: ClientProviders.tsx  LegalShell.tsx  PixelsLoader.tsx
web/src/components/modals/: Modal.tsx
web/src/components/sections/: CookieConsent.tsx  DualOutput.tsx  FAQ.tsx  FinalCta.tsx  Footer.tsx  Hero.tsx  LivePreview.tsx  Nav.tsx  PixComparison.tsx  Pricing.tsx  SocialProof.tsx  TemplateChips.tsx  TrustStrip.tsx  UseCases.tsx
web/src/components/ui/: Button.tsx  DualCta.tsx  Input.tsx  Turnstile.tsx
web/src/hooks/: useUtm.ts
web/src/lib/: analytics.ts  api.ts  consent.ts  copy-en.ts  copy-pt.ts  copy.ts  design.ts  modal-context.tsx  utils.ts
