[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx[socks]>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "redis>=7.4.0",
    "stripe>=15.1.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
